--- a/task5-6/style_3.css
+++ b/task5-6/style_3.css
@@ -29,6 +29,7 @@ body{
     text-align: center;
     height: 150px;
     width: 100px;
+    font-weight:bold;
     line-height: 150px;
     padding:75px auto;
     float: left;
