--- a/task7-8/style_1.css
+++ b/task7-8/style_1.css
@@ -46,11 +46,30 @@
 }
 .nav{
     width: 100%;
+    margin: 20px 0 10px 0;
     border-bottom: #eeeeee solid 1px;
 }
 .nav nav{
     width: 960px;
     margin: 0 auto;
+}
+.nav1 .nav1_items{
+    display: inline-block;
+    height:45px;
+    line-height: 45px;
+    background-color: #eeeeee;
+    border: 1px solid #eee;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    border-bottom: white;
+    padding:0 30px;
+    box-sizing: border-box;
+}
+.nav1 .active{
+    background-color: white;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    border-bottom: white;
 }
 .main{
     width: 960px;
