--- a/task9-11/style_1.css
+++ b/task9-11/style_1.css
@@ -71,7 +71,7 @@ header .admin .word3 .head1{
 }
 .jianjie .box{
     height: 101px;
-    margin: 0 auto;
+    margin: 60px auto 0;
 }
 .jianjie .img .box1{
     float: left;
